--- a/.gitignore
+++ b/.gitignore
@@ -152,6 +152,7 @@ publish/
 PublishScripts/
 
 # NuGet Packages
+**/nuget.exe
 *.nupkg
 # The packages folder can be ignored because of Package Restore
 **/packages/*
