--- a/CleanCodeNet.nuspec
+++ b/CleanCodeNet.nuspec
@@ -2,17 +2,17 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>CleanCodeNet</id>
-    <version>0.1.0</version>
+    <version>0.1.1</version>
     <authors>Denys Prodan</authors>
     <owners>Denys Prodan</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectUrl>https://github.com/denis-prodan/clean-code-net</projectUrl>
     <description>Metapackage that includes analyzers to improve code correctness. Not affiliated with Bob Martin.</description>
-    <releaseNotes>First version that includes analyzers for switch, checks that constructor arguments not null and method/constructor calls must have param names if 4 or more params included.</releaseNotes>
+    <releaseNotes>Update NamedParametersAnalyzer to fix critical issue with "params" modifier</releaseNotes>
     <tags>analyzers, code, correctness, ConstructorNullAnalyzer, NamedParametersAnalyzer, SwitchAnalyzer</tags>
     <repository url="https://github.com/denis-prodan/constructor-null-analyzer" />
     <dependencies>
-      <dependency id="NamedParametersAnalyzer" version="0.2.0" />
+      <dependency id="NamedParametersAnalyzer" version="0.3.0" />
       <dependency id="SwitchAnalyzer" version="0.6.6" />
       <dependency id="ConstructorNullAnalyzer" version="0.4.0" />
     </dependencies>
