--- a/SwitchAnalyzer/SwitchAnalyzer/SwitchAnalyzer.csproj
+++ b/SwitchAnalyzer/SwitchAnalyzer/SwitchAnalyzer.csproj
@@ -8,7 +8,7 @@
   
   <PropertyGroup>
     <PackageId>SwitchAnalyzer</PackageId>
-    <PackageVersion>0.6.6.0</PackageVersion>
+    <PackageVersion>0.6.7.0</PackageVersion>
     <Authors>Denys Prodan</Authors>
     <PackageLicenseUrl></PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/denis-prodan/Switch-analyzer</PackageProjectUrl>
@@ -17,15 +17,15 @@
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Description>Check that switch statement covers all cases for enumerations, all Interface implementations or base class inheritors.
 Additional rule to  check - switch statement doesn't have "default" branch or this branch throws exception.</Description>
-    <PackageReleaseNotes>Check inheritors of correct class/interface (with respect to namespace).</PackageReleaseNotes>
+    <PackageReleaseNotes>Fix incorrect behavior with bitwise expressions.</PackageReleaseNotes>
     <Copyright></Copyright>
     <PackageTags>SwitchAnalyzer, analyzers</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
-    <Version>0.6.6</Version>
+    <Version>0.6.7</Version>
     <Company></Company>
     <Product>Switch Analyzer</Product>
-    <AssemblyVersion>0.6.6.0</AssemblyVersion>
-    <FileVersion>0.6.6.0</FileVersion>
+    <AssemblyVersion>0.6.7.0</AssemblyVersion>
+    <FileVersion>0.6.7.0</FileVersion>
   </PropertyGroup>
   
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
