--- a/ConstructorNullAnalyzer/ConstructorNullAnalyzer/ConstructorNullAnalyzer.csproj
+++ b/ConstructorNullAnalyzer/ConstructorNullAnalyzer/ConstructorNullAnalyzer.csproj
@@ -8,7 +8,7 @@
   
   <PropertyGroup>
     <PackageId>ConstructorNullAnalyzer</PackageId>
-    <PackageVersion>0.4.0.0</PackageVersion>
+    <PackageVersion>0.4.1.0</PackageVersion>
     <Authors>Denys Prodan</Authors>
     <PackageLicenseUrl></PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/denis-prodan/constructor-null-analyzer</PackageProjectUrl>
@@ -16,11 +16,11 @@
     <RepositoryUrl>https://github.com/denis-prodan/constructor-null-analyzer</RepositoryUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Description>Checks that all object-type arguments are checked to be not-null inside of constructor. Provide fixer that adds these checks automatically.</Description>
-    <PackageReleaseNotes>Create mixed if + coalesce fixers instead of coalesce.</PackageReleaseNotes>
+    <PackageReleaseNotes>Align diagnostics id with other packages.</PackageReleaseNotes>
     <Copyright></Copyright>
     <PackageTags>ConstructorNullAnalyzer, analyzers</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
-    <Version>0.4.0</Version>
+    <Version>0.4.1</Version>
     <Company />
     <Product>Constructor Null Analyzer</Product>
   </PropertyGroup>
