--- a/Exceptions/ExceptionsAnalyzer/ExceptionsAnalyzer.csproj
+++ b/Exceptions/ExceptionsAnalyzer/ExceptionsAnalyzer.csproj
@@ -39,4 +39,8 @@ Rethrow new exception without inner exception</Description>
     <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\CleanCode.NET.Common\CleanCode.NET.Common.csproj" />
+  </ItemGroup>
+
 </Project>
