Add settings for analyzers shipped as extension.

--- a/ConstructorNullAnalyzer/ConstructorNullAnalyzer/ConstructorNullAnalyzer.csproj
+++ b/ConstructorNullAnalyzer/ConstructorNullAnalyzer/ConstructorNullAnalyzer.csproj
@@ -45,4 +45,8 @@
     <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\CleanCode.NET.Common\CleanCode.NET.Common.csproj" />
+  </ItemGroup>
+
 </Project>
