--- a/NamedParametersAnalyzer/NamedParametersAnalyzer/NamedParametersAnalyzer.csproj
+++ b/NamedParametersAnalyzer/NamedParametersAnalyzer/NamedParametersAnalyzer.csproj
@@ -35,4 +35,8 @@
     <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\CleanCode.NET.Common\CleanCode.NET.Common.csproj" />
+  </ItemGroup>
+
 </Project>
